--- a/Widget.html
+++ b/Widget.html
@@ -1,82 +1,175 @@
 <div>
     <div data-dojo-attach-point="tabcontainer">
-        <div data-dojo-attach-point="tabNode1" class= "tabNode1" id="tabNode1">
-            <div data-dojo-attach-point="identifyContainer" id="identifyContainer">
+        <div data-dojo-attach-point="tabNode1" class="tab-node-hidden">
+            <div data-dojo-attach-point="identifyContainer">
                 <div data-dojo-attach-point="contentsdiv" style="display: none">
-                <table style="width: 100%">
-                    <tr>
-                        <td style="text-align:center">
-                            <button title="${nls.selectAllButtonTooltip}" data-dojo-attach-point="selectAllButton" class="jimu-btn" style="width:100%;display:inline-block">
-                                <img data-dojo-attach-point="selectAllIcon" src="" class="identify-icon">${nls.selectAllButtonText}
-                                <div id="selectAllStatus" style="float:right">OFF</div>
-                            </button>
-                        </td>
-                    </tr>
-                </table>
-                <table style="width: 100%">
-                    <tr data-dojo-attach-point="layerListRow">
-                        <td class="m2g-header" data-dojo-attach-point="layerListText">${nls.networkLayerText}</td>
-                        <td style="float:right"><Select data-dojo-type="dijit/form/Select" data-dojo-attach-point="layerList" class="m2g-select"></Select></td>
-                    </tr>
-                    <tr data-dojo-attach-point="routeIdRow">
-                        <td class="m2g-header">${nls.routeIdText}</td>
-                        <td style="float:right"><input data-dojo-type="dijit/form/ComboBox" data-dojo-attach-point="routeId" id="routeId" style="width:170px;height:28px;margin-right:2px"></input>
-                            <button title="${nls.selectRouteBtnTooltip}" data-dojo-attach-point="selectRouteBtn" class="btn-select-route"></button></td>
-                    </tr>
-                    <tr data-dojo-attach-point="fromMeasureRow">
-                        <td class="m2g-header" data-dojo-attach-point="fromMeasureText">${nls.measureText}</td>
-                        <td style="float:right"><input type="number" data-dojo-attach-point="fromMeasureTextBox" data-dojo-type="dijit/form/NumberTextBox" data-dojo-props=${nls.measureBoxProps} id="fromMeasure" class="m2g-input"/></td>
-                    </tr>
-                </table>
-                <table style="width: 100%">
-                    <tr>
-                        <td style="float:right"><button data-dojo-attach-point="locateBtn" class="jimu-btn">${nls.locateButtonText}</button>
-                        <button data-dojo-attach-point="clearBtn" class="jimu-btn">${nls.clearButtonText}</button></td>
-                    </tr>
-                </table>
-                <table style="width: 100%">
-                    <tr data-dojo-attach-point="intersectionContainer">
-                        <td style="padding-top: 10px;padding-bottom: 10px;">
-                            <input data-dojo-type="dijit/form/CheckBox" data-dojo-attach-point="intersectionToggle" id="intersectionToggle"/><label for="intersectionToggle" style="padding-left: 10px;">${nls.intersectionLabel}</label>
-                        </td>
-                        <td style="padding-top: 10px;padding-bottom: 10px;">
-                            <span id="intersection-tooltip" class="tooltip">🛈</span>
-                            <div data-dojo-type="dijit/Tooltip" data-dojo-props="connectId: 'intersection-tooltip'">${nls.intersectionTooltip}</div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="padding-top: 10px;padding-bottom: 10px;">
-                            <input data-dojo-type="dijit/form/CheckBox" data-dojo-attach-point="addToToggle" id="addToToggle"/><label for="addToToggle" style="padding-left: 10px;">${nls.addToLabel}</label>
-                        </td>
-                        <td style="padding-top: 10px;padding-bottom: 10px;">
-                            <span id="addto-tooltip" class="tooltip">🛈</span>
-                            <div data-dojo-type="dijit/Tooltip" data-dojo-props="connectId: 'addto-tooltip'">${nls.addToTooltip}</div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="padding-top: 10px;padding-bottom: 10px;"><div id="resultmessage" data-dojo-attach-point="resultmessage"></div></td>
-                    </tr>
-                    <hr>
-                    <tr>
-                        <td>
-                            <div data-dojo-attach-point="progressbar"></div>
-                        </td>
-                    </tr>
-                </table>
+                    <table class="main-table">
+                        <tr data-dojo-attach-point="tabContainerRow" class="searchTabContainer">
+                            <td colspan="2">
+                            <div data-dojo-attach-point="searchContainer">
+                                <div data-dojo-attach-point="byRouteNode" class="tab-node-hidden">
+                                    <div data-dojo-attach-point="searchGridContainer" class="searchContainer">
+                                        <div class="identifyRow">
+                                            <div class="m2g-header" data-dojo-attach-point="layerListText"><p>${nls.networkLayerText}</p></div>
+                                            <div class="layerList"><Select data-dojo-type="dijit/form/Select" data-dojo-attach-point="layerList" class="m2g-select"></Select></div>
+                                        </div>
+                                        <div class="identifyRow">
+                                            <div class="m2g-header"><p>${nls.routeIdText}</p></div>
+                                            <div><input data-dojo-type="dijit/form/ComboBox" data-dojo-attach-point="routeId" class="routeInput"></input></div>
+                                            <div title="${nls.selectRouteBtnTooltip}" data-dojo-attach-point="selectRouteBtn" class="btn-select-route"></div>
+                                        </div>
+                                        <div class="identifyRow">
+                                            <div class="m2g-header" data-dojo-attach-point="fromMeasureText"><p>${nls.fromMeasureText}</p></div>
+                                            <div data-dojo-attach-point="fromMeasureTextBoxContainer"></div>
+                                            <div title="${nls.selectMeasureTooltip}" data-dojo-attach-point="selectFromMeasureBtn" class="btn-select-measure"></div>
+                                        </div>
+                                        <div class="identifyRow">
+                                            <div class="m2g-header" data-dojo-attach-point="toMeasureText"><p>${nls.toMeasureText}</p></div>
+                                            <div data-dojo-attach-point="toMeasureTextBoxContainer"></div>
+                                            <div title="${nls.selectMeasureTooltip}" data-dojo-attach-point="selectToMeasureBtn" class="btn-select-measure"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div data-dojo-attach-point="byPointNode" class="tab-node-hidden">
+                                    <div data-dojo-attach-point="byPointContainer" class="byPointContainer">
+                                        <div>
+                                            <div class="coordsLabel"><span>${nls.longitude}</span></div>
+                                            <div class="coordsInputContainer">
+                                                <input type="number" data-dojo-attach-point="lonInput" step="any" class="coordsInput" placeholder="e.g. -84.5553944"></input>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div class="coordsLabel"><span>${nls.latitude}</span></div>
+                                            <div class="coordsInputContainer">
+                                                <input type="number" data-dojo-attach-point="latInput" step="any" class="coordsInput" placeholder="e.g. 42.7336274"></input>
+                                            </div>
+                                        </div>
+                                        <div data-dojo-attach-point="byPointToggle" class="byPointToggle">
+                                            <div class="iconContainer" data-dojo-attach-point="drawPointContainer">
+                                                <span title="Add point from map click" class="drawPointBtn" data-dojo-attach-point="drawPointButton">
+                                                    <i class="esri-icon-map-pin"></i>
+                                                </span>
+                                            </div>
+                                            <div class="iconContainer" data-dojo-attach-point="zoomPointContainer">
+                                                <span title="Zoom to map point" class="drawPointBtn" data-dojo-attach-point="zoomPointButton">
+                                                    <i class="esri-icon-zoom-in-magnifying-glass"></i>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div data-dojo-attach-point="byFileNode" class="tab-node-hidden">
+                                    <div data-dojo-attach-point="byFileContainer" class="byFileContainer">
+                                        <div class="uploadIcon"><i class="esri-icon-upload"></i></div>
+                                        <div class="dropText">${nls.dropFile}</div>
+                                        <div class="dropText" style="font-size: 11px;">${nls.or}</div>
+                                        <label class="search-btn" style="text-transform: uppercase;font-size: 12px;" data-dojo-attach-point="uploadLabel">
+                                            ${nls.browseFiles}
+                                            <input type="file" accept=".csv" style="display:none" data-dojo-attach-point="fileNode"/>
+                                        </label>
+                                        <div data-dojo-attach-point="fileInfoIcon" class="fileInfoIcon"><i class="esri-icon-question"></i></div>
+                                    </div>
+                                    <div data-dojo-attach-point="CSVFileContainer" class="byFileContainer" style="display: none;">
+                                        <div class="fileIcon"><i class="esri-icon-documentation"></i></div>
+                                        <div class="dropText" data-dojo-attach-point="fileName"></div>
+                                        <div class="dropText" data-dojo-attach-point="fileProperties" style="font-size: 11px;"></div>
+                                        <div data-dojo-attach-point="removeFileIcon" class="fileInfoIcon"><i class="esri-icon-close"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="buttonRow">
+                                <div class="precisionContainer">
+                                    <div class="iconContainer" style="margin-right: 10px;" data-dojo-attach-point="settingIconContainer">
+                                        <span title="Configure search preferences" class="drawPointBtn" data-dojo-attach-point="settingButton">
+                                            <i class="esri-icon-settings"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div data-dojo-attach-point="locateBtn" class="search-btn">${nls.locateButtonText}</div>
+                                <div data-dojo-attach-point="clearBtn" class="search-btn">${nls.clearButtonText}</div>
+                            </td>
+                        </tr>
+                    </table>
+                    <table class="container-table" data-dojo-attach-point="viewDateContainer">
+                        <tr>
+                            <td class="m2g-header" rowspan="2" data-dojo-attach-point="dateTimeText"><p>${nls.timePickerText}</p></td>
+                            <td style="float:right"><Select data-dojo-type="dijit/form/Select" data-dojo-attach-point="timestampPicker" class="m2g-input"></Select></td>
+                        </tr>
+                        <tr data-dojo-attach-point="dateTimeRow">
+                            <td style="float:right"><div data-dojo-attach-point="timePickerContainer"></div></td>
+                        </tr>
+                    </table>
+                    <table class="container-table">
+                        <tr>
+                            <td class="toggleRow">
+                                <label class="toggleLabel"><div data-dojo-type="dijit/form/CheckBox" class="switch-toggle" data-dojo-props="checked:false" data-dojo-attach-point="addToToggle"></div>${nls.addToLabel}</label>
+                                <span id="${id}addToTooltip" class="tooltip"><i class="esri-icon-description"></i></span>
+                                <div data-dojo-type="dijit/Tooltip" data-dojo-props="connectId: '${id}addToTooltip'">${nls.addToTooltip}</div>
+                            </td>
+                        </tr>
+                    </table>
+                    <table class="container-table" data-dojo-attach-point="attributeSetContainer">
+                        <tr>
+                            <td class="toggleRow" colspan="2">
+                                <label class="toggleLabel"><div data-dojo-type="dijit/form/CheckBox" class="switch-toggle" data-dojo-props="checked:false" data-dojo-attach-point="attributeSetToggle"></div>${nls.attributeSetLabel}</label>
+                                <span id="${id}attributeSetTooltip" class="tooltip"><i class="esri-icon-description"></i></span>
+                                <div data-dojo-type="dijit/Tooltip" data-dojo-props="connectId: '${id}attributeSetTooltip'">${nls.attributeSetTooltip}</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="m2g-header" data-dojo-attach-point="attributeSetText"><p>${nls.attributeSetText}</p></td>
+                            <td style="text-align: right;">
+                                <div class="attributesetRow">
+                                    <Select data-dojo-type="dijit/form/Select" data-dojo-attach-point="attributeSetPicker" class="attributeset-input"></Select>
+                                    <span data-dojo-attach-point="attributeSetDescribe" class="clickTooltip" title="${nls.attributeSetDescribe}"><i class="esri-icon-question"></i></span>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                    <table class="container-table" data-dojo-attach-point="intersectionContainer">
+                        <tr>
+                            <td class="toggleRow" colspan="2">
+                                <label class="toggleLabel"><div data-dojo-type="dijit/form/CheckBox" class="switch-toggle" data-dojo-props="checked:false" data-dojo-attach-point="intersectionToggle"></div>${nls.intersectionLabel}</label>
+                                <span id="${id}intersectionTooltip" class="tooltip"><i class="esri-icon-description"></i></span>
+                                <div data-dojo-type="dijit/Tooltip" data-dojo-props="connectId: '${id}intersectionTooltip'">${nls.intersectionTooltip}</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="m2g-header" data-dojo-attach-point="intersectionPickerText"><p>${nls.intersectionPickerText}</p></td>
+                            <td style="float:right"><Select data-dojo-type="dijit/form/Select" data-dojo-attach-point="intersectionPicker" class="m2g-input"></Select></td>
+                        </tr>
+                        <tr>
+                            <td data-dojo-attach-point="snappingStatus" class="snapping-status" colspan="2"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
-        <div data-dojo-attach-point="tabNode2">
-            <table style="padding-top: 10px; width: 100%">
-                <tr>
-                    <td style="width: 30%;"><div id="resultCounter" data-dojo-attach-point="resultCounter">${nls.resultCounter}</div></td>
-                    <td>
-                        <span id="result-tooltip" class="tooltip">🛈</span>
-                        <div data-dojo-type="dijit/Tooltip" data-dojo-props="connectId: 'result-tooltip'">${nls.resultTooltip1}<br><br>${nls.resultTooltip2}</div>
-                    </td>
-                    <td style="float:right"><button data-dojo-attach-point="exportBtn" class="jimu-btn">${nls.exportButtonText}</button></td>
-                </tr>
-            </table>
-            <div data-dojo-attach-point="resultsdiv"></div>
+        <div data-dojo-attach-point="tabNode2" class="tab-node-hidden">
+            <div style="height: 100%;position: relative;">
+                <div class="flexBanner">
+                    <div>
+                        <div>
+                            <span data-dojo-attach-point="resultCounter">${nls.resultCounter}</span>
+                            <span id="${id}resultTooltip" class="resultTooltip"><i class="esri-icon-description"></i></span>
+                            <div data-dojo-type="dijit/Tooltip" data-dojo-props="connectId: '${id}resultTooltip'">${nls.resultTooltip1}<br><br>${nls.resultTooltip2}</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="controlContainer">
+                            <span data-dojo-attach-point="exportBtn" class="controlBtn" title="${nls.exportResults}"><i class="esri-icon-download"></i></span>
+                        </div>
+                        <div class="controlContainer">
+                            <span data-dojo-attach-point="clearLayerBtn" class="controlBtn" title="${nls.clearResults}"><i class="esri-icon-trash"></i></span>
+                        </div>
+                    </div>
+                </div>
+                <div data-dojo-attach-point="resultsdiv" class="resultsDiv"></div>
+            </div>
+        </div>
     </div>
+    <div data-dojo-type="jimu/dijit/LoadingShelter" data-dojo-attach-point="shelter" data-dojo-props="hidden:true,loadingText:'${nls.loadingText}'" style="overflow:hidden;"></div>
 </div>
